<resources>
    <string name="app_name">DietMe</string>
    <string name="password_text">Contraseña</string>
    <string name="ask_for_link">Solicitar enlace</string>
    <string name="log_in">Entrar</string>
    <string name="title_activity_prueba">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Correo electrónico no válido.</string>
    <string name="invalid_password">Contraseña no válida.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ask_for_access">Solicitar acceso</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_ask">¿Desea solicitar un código de acceso?</string>
    <string name="yes">Sí</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="introduce_mail">Introduce tu correo electrónico</string>
    <string name="introduce_phone">Introduce tu número de teléfono</string>
    <string name="send">Enviar</string>
    <string name="no_such_email">"No existe ningún usuario registrado con el correo "</string>
    <string name="request_submitted">Solicitud enviada. En breve recibirá respuesta.</string>
    <string name="user_not_found">No existen coincidencias.</string>
    <string name="remember_me">Recordarme</string>
    <string name="show_password">Mostrar contraseña</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_text">E-Mail</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>

    <string name="home_second">Home Second</string>
    <string name="patients_title">Pacientes</string>
    <string name="appointment_title">Citas</string>
    <string name="home_title">Inicio</string>
    <string name="empty_email">Por favor, introduce algún correo.</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="manage_notifications">Administrar notificaciones</string>
    <string name="old_password">Introduce tu contraseña actual</string>
    <string name="new_password">Introduce tu nueva contraseña</string>
    <string name="repeat_password">Repite la nueva contraseña</string>
    <string name="update_password">Actualizar contraseña</string>
    <string name="invalid_new_password">La contraseña no cumple los requisitos de seguridad.</string>
    <string name="invalid_repeat_password">Ambas contraseñas deben coincidir.</string>
    <string name="password_changed">Contraseña modificada.</string>
    <string name="weak_password">"La contraseña es muy débil. Asegúrate de que, al menos, tiene ocho caracteres, incluyendo un dígito, una mayúscula y un carácter especial. "</string>
    <string name="do_not_exit">Por seguridad, no puedes salir sin haber actualizado la contraseña.</string>
    <string name="patient_phone_number">Móvil</string>
    <string name="patient_email">Correo electrónico</string>
    <string name="patient_age">Edad</string>
    <string name="patient_gender">Sexo</string>
    <string name="patient_id">Identificador</string>
    <string name="female">Mujer</string>
    <string name="male">Hombre</string>
    <string name="developer_info_only">Información accesible solo para el desarrollador.</string>
    <string name="developer_action_only">Acción disponible solo para el desarrollador.</string>
    <string name="body_composition">Estudio corporal</string>
    <string name="shared_files">Archivos compartidos</string>
    <string name="copied_to_clipboard">Copiado en el portapapeles.</string>
    <string name="height">Altura:</string>
    <string name="weight">Peso:</string>
    <string name="basic_body_composition_info">Datos básicos</string>
    <string name="bmi">IMC:</string>
    <string name="anthropometrics_measurements">Medidas antropométricas</string>
    <string name="perimeters">Perímetros</string>
    <string name="folds">Pliegues</string>
    <string name="waist">Cintura:</string>
    <string name="hip">Cadera:</string>
    <string name="arms">Brazos:</string>
    <string name="thighs">Muslos:</string>
    <string name="subscapular_skinfold">Subescapular:</string>
    <string name="empty_text">-</string>
    <string name="abdominal_skinfold">Abdominal:</string>
    <string name="suprailiacal_skinfold">Suprailiaco:</string>
    <string name="bicipital_skinfold">Bicipital:</string>
    <string name="tricipital_skinfold">Tricipital:</string>
    <string name="waist_hip_index">Índice cintura-cadera:</string>
    <string name="bioimpedance">Bioimpedancia</string>
    <string name="lean_mass">Masa magra:</string>
    <string name="fat_mass">Masa grasa:</string>
    <string name="update_measurements">Actualizar datos</string>
    <string name="patient_name">Nombre</string>
    <string name="patient_forenames">Apellidos</string>
    <string name="is_admin">Es administrador</string>
    <string name="new_patient">Nuevo paciente</string>
    <string name="patient_birthday">Fecha de nacimiento</string>
    <string name="create_patient">Crear paciente</string>
    <string name="patient_created">Paciente creado.</string>
    <string name="invalid_create_patient">Todos los campos de texto deben estar completos.</string>
    <string name="not_specified">No especificado</string>
    <string name="edit">Editar</string>
    <string name="remove">Eliminar</string>
    <string name="edit_patient_title">Editar paciente</string>
    <string name="update">Actualizar</string>
    <string name="updating">Actualizando…</string>
    <string name="updated">Datos actualizados.</string>
    <string name="manage_appointments">Administrar citas</string>
    <string name="restart_database">Reiniciar base de datos</string>
    <string name="restarting_conditions">Esta acción reiniciará la sección \"Citas\" de la base de datos, dejándolas todas libres y sin pacientes asignados.\n\n¿Desea continuar?</string>
    <string name="database_restarted">Base de datos reiniciada.</string>
    <string name="invalid_phone">Número de teléfono no válido.</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis leo pulvinar, viverra neque ut, dapibus augue. Integer sit amet leo tincidunt, finibus leo eu, consectetur velit. Etiam laoreet dignissim lacus vitae ornare. Integer elementum, elit vel vehicula auctor, ipsum mauris dapibus nulla, at cursus sem quam eget lacus. Donec tempus dolor ac rutrum sodales. Cras sed nibh leo. Morbi imperdiet euismod dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus porttitor, metus eu tincidunt pharetra, ligula est aliquam libero, vel commodo odio nulla id ante. "</string>
    <string name="a_minute_ago">Hace menos de un minuto</string>
    <string name="upload_new_file">Subir nuevo archivo</string>
    <string name="patient_edited">Paciente editado</string>
    <string name="no_shared_files">Todavía no se han compartido archivos con este paciente</string>
    <string name="succesfully_upload">Archivo subido con éxito.</string>
    <string name="pdf_extension">.pdf</string>
    <string name="upload">Subir</string>
    <string name="request_access">Solicitar acceso</string>
    <string name="database_snapshot_failure">Error al capturar base de datos.</string>
    <string name="downloading">Descargando...</string>
    <string name="error_opening_page">\"Error al abrir página \"</string>
    <string name="no_appointments_found">No se han encontrado citas asignadas a este día</string>
    <string name="another">Otro</string>
    <string name="no_patient_appointments_found">No se han encontrado citas asignadas a este paciente</string>
    <string name="new_appointment">Nueva cita</string>
    <string name="no_free_appointments_found">No hay citas libres para este día</string>
    <string name="finalized_day">Día finalizado</string>
    <string name="availability_management">Gestionar disponibilidad</string>
    <string name="introduce_start_date">Introduce la fecha/hora de inicio</string>
    <string name="introduce_end_date">Introduce la fecha/hora de fin</string>
    <string name="apply">Aplicar</string>
    <string name="invalid_dates">Por favor, introduce fechas válidas</string>
    <string name="restarting_database">Reiniciando base de datos...</string>
    <string name="no_patient_main_appointments_found">No tienes ninguna cita asignada.\n¿Necesitas pedir una?</string>
    <string name="profile_title">Perfil</string>
    <string name="no_complementary_files">Todavía no tienes material complementario</string>
    <string name="replace">Reemplazar</string>
    <string name="blocked_appointments">Citas bloqueadas.</string>
    <string name="email_already_registered">Ya existe un usuario registrado con este correo.</string>
    <string name="impossible_to_block_previous_date">No se pueden bloquear citas anteriores a la fecha actual.</string>
    <string name="appointment_already_created">Ya existe una cita asignada este día.\n¿Desea reemplazarla?</string>
    <string name="introduce_file_name">Introduce el nombre del archivo a subir:</string>
</resources>
