<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/convergence"
        android:text="@string/waist"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/hip"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/arms"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/thighs"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/convergence"
        android:text="@string/perimeters"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/folds"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/convergence"
        android:text="@string/subscapular_skinfold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/abdominal_skinfold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/suprailiacal_skinfold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/bicipital_skinfold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/tricipital_skinfold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/bioimpedance"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/convergence"
        android:text="@string/lean_mass"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/fat_mass"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView46"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <EditText
        android:id="@+id/editWaist"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <EditText
        android:id="@+id/editHip"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="@+id/editWaist" />

    <EditText
        android:id="@+id/editArms"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView29"
        app:layout_constraintStart_toStartOf="@+id/editHip" />

    <EditText
        android:id="@+id/editThighs"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView31"
        app:layout_constraintStart_toStartOf="@+id/editArms" />

    <EditText
        android:id="@+id/editSubs"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView37"
        app:layout_constraintStart_toEndOf="@+id/textView37" />

    <EditText
        android:id="@+id/editAbs"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView39"
        app:layout_constraintStart_toStartOf="@+id/editSubs" />

    <EditText
        android:id="@+id/editSupra"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView41"
        app:layout_constraintStart_toStartOf="@+id/editAbs" />

    <EditText
        android:id="@+id/editBici"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView43"
        app:layout_constraintStart_toStartOf="@+id/editSupra" />

    <EditText
        android:id="@+id/editTrici"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView44"
        app:layout_constraintStart_toStartOf="@+id/editBici" />

    <EditText
        android:id="@+id/editLean"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView46"
        app:layout_constraintStart_toEndOf="@+id/textView46" />

    <EditText
        android:id="@+id/editFat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView47"
        app:layout_constraintStart_toStartOf="@+id/editLean" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/basic_body_composition_info"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/height"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/weight"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView49"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView49"
        app:layout_constraintStart_toEndOf="@+id/textView49" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView50"
        app:layout_constraintStart_toStartOf="@+id/editHeight" />
</androidx.constraintlayout.widget.ConstraintLayout>